--- a/solar_linear_modes.ipynb
+++ b/solar_linear_modes.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "### Loading external 1D solar model\n",
-    "model_file = 'profile_1D_sun_r15140.data.FGONG'\n",
+    "model_file = 'profile_1D_sun_r15140_Z0p02.data.FGONG'\n",
     "model = fgong.load_fgong(model_file, G=6.67232e-8)"
    ]
   },
